--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "indexocvconverter",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
